<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollView"
    tools:context="com.example.popey.cityquiz.MainActivity">

    <LinearLayout
        android:id="@+id/main_vertical"
        style="@style/Linear"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/intro"
            style="@style/Linear">

            <ImageView
                android:id="@+id/welcome_image"
                style="@style/ImageView"
                android:src="@drawable/capital" />

            <TextView
                android:id="@+id/explain_text"
                style="@style/questiontext"
                android:text="@string/welcome_message" />

            <View style="@style/viewLine" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/q1"
            style="@style/Linear"
            android:background="@drawable/bg2">

            <TextView
                android:id="@+id/title_1"
                style="@style/question_title"
                android:text="@string/question1" />

            <TextView
                android:id="@+id/question_1"
                style="@style/questiontext"
                android:text="@string/first_q" />

            <RadioGroup
                android:id="@+id/answer_1"
                style="@style/RadioGroup">

                <RadioButton
                    android:id="@+id/answer_1_a"
                    style="@style/radio_buttons"
                    android:text="@string/q_1_a" />

                <RadioButton
                    android:id="@+id/answer_1_b"
                    style="@style/radio_buttons"
                    android:text="@string/q_1_b" />

                <RadioButton
                    android:id="@+id/answer_1_c"
                    style="@style/radio_buttons"
                    android:text="@string/q_1_c" />

            </RadioGroup>

            <View style="@style/viewLine" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/q2"
            style="@style/Linear"
            android:background="@drawable/bg3">

            <TextView
                android:id="@+id/title_2"
                style="@style/question_title"
                android:text="@string/question2" />

            <TextView
                android:id="@+id/question_2"
                style="@style/questiontext"
                android:layout_marginBottom="@dimen/triple_margin"
                android:text="@string/second_q" />

            <CheckBox
                android:id="@+id/answer_2_a"
                style="@style/radio_buttons"
                android:text="@string/q_2_a" />

            <CheckBox
                android:id="@+id/answer_2_b"
                style="@style/radio_buttons"
                android:text="@string/q_2_b" />

            <CheckBox
                android:id="@+id/answer_2_c"
                style="@style/radio_buttons"
                android:text="@string/q_2_c" />

            <CheckBox
                android:id="@+id/answer_2_d"
                style="@style/radio_buttons"
                android:layout_marginBottom="@dimen/triple_margin"
                android:text="@string/q_2_d" />

            <View style="@style/viewLine" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/q3"
            style="@style/Linear"
            android:background="@drawable/bg4">

            <TextView
                android:id="@+id/title_3"
                style="@style/question_title"
                android:text="@string/question3" />

            <TextView
                android:id="@+id/question_3"
                style="@style/questiontext"
                android:text="@string/third_q"
                android:layout_marginBottom="@dimen/triple_margin"/>

            <EditText
                android:id="@+id/answer_3"
                android:backgroundTint="@color/textcolor"
                android:textColorHint="@color/textcolor"
                android:textCursorDrawable="@color/textcolor"
                android:hint="@string/q3_hint"
                android:maxLines="1"
                style="@style/Edit_text"/>

            <View style="@style/viewLine" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/q4"
            style="@style/Linear"
            android:background="@drawable/bg5">

            <TextView
                android:id="@+id/title_4"
                style="@style/question_title"
                android:text="@string/question4" />

            <TextView
                android:id="@+id/question_4"
                style="@style/questiontext"
                android:text="@string/fourth_q" />

            <RadioGroup
                android:id="@+id/answer_4"
                style="@style/RadioGroup">

                <RadioButton
                    android:id="@+id/answer_4_a"
                    style="@style/radio_buttons"
                    android:text="@string/q_4_a" />

                <RadioButton
                    android:id="@+id/answer_4_b"
                    style="@style/radio_buttons"
                    android:text="@string/q_4_b" />

                <RadioButton
                    android:id="@+id/answer_4_c"
                    style="@style/radio_buttons"
                    android:text="@string/q_4_c" />

                <RadioButton
                    android:id="@+id/answer_4_d"
                    style="@style/radio_buttons"
                    android:text="@string/q_4_d" />

            </RadioGroup>

            <View style="@style/viewLine" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/q5"
            style="@style/Linear"
            android:background="@drawable/bg6">

            <TextView
                android:id="@+id/title_5"
                style="@style/question_title"
                android:text="@string/question5" />

            <TextView
                android:id="@+id/question_5"
                style="@style/questiontext"
                android:text="@string/fifth_q"
                android:layout_marginBottom="@dimen/triple_margin"/>

            <EditText
                android:id="@+id/answer_5"
                android:backgroundTint="@color/textcolor"
                android:textColorHint="@color/textcolor"
                android:textCursorDrawable="@color/textcolor"
                android:hint="@string/q3_hint"
                android:maxLines="1"
                style="@style/Edit_text"/>

            <View style="@style/viewLine" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/q6"
            style="@style/Linear"
            android:background="@drawable/bg7">

            <TextView
                android:id="@+id/title_6"
                style="@style/question_title"
                android:text="@string/question6" />

            <TextView
                android:id="@+id/question_6"
                style="@style/questiontext"
                android:text="@string/sixth_q" />

            <RadioGroup
                android:id="@+id/answer_6"
                style="@style/RadioGroup">

                <RadioButton
                    android:id="@+id/answer_6_a"
                    style="@style/radio_buttons"
                    android:text="@string/q_6_a" />

                <RadioButton
                    android:id="@+id/answer_6_b"
                    style="@style/radio_buttons"
                    android:text="@string/q_6_b" />
                <RadioButton
                    android:id="@+id/answer_6_c"
                    style="@style/radio_buttons"
                    android:text="@string/q_6_c" />

                <RadioButton
                    android:id="@+id/answer_6_d"
                    style="@style/radio_buttons"
                    android:text="@string/q_6_d" />

            </RadioGroup>

            <View style="@style/viewLine" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/q7"
            style="@style/Linear"
            android:background="@drawable/bg8">

            <TextView
                android:id="@+id/title_7"
                style="@style/question_title"
                android:text="@string/question7" />

            <TextView
                android:id="@+id/question_7"
                style="@style/questiontext"
                android:text="@string/seventh_q"
                android:layout_marginBottom="@dimen/triple_margin"/>

            <CheckBox
                android:id="@+id/answer_7_a"
                style="@style/radio_buttons"
                android:text="@string/q_7_a" />

            <CheckBox
                android:id="@+id/answer_7_b"
                style="@style/radio_buttons"
                android:text="@string/q_7_b" />

            <CheckBox
                android:id="@+id/answer_7_c"
                style="@style/radio_buttons"
                android:text="@string/q_7_c" />

            <CheckBox
                android:id="@+id/answer_7_d"
                style="@style/radio_buttons"
                android:text="@string/q_7_d"
                android:layout_marginBottom="@dimen/triple_margin"/>

            <View style="@style/viewLine" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit_button"
                android:onClick="submitButton"
                style="@style/button"
                android:text="@string/submit" />

            <Button
                style="@style/button"
                android:layout_margin="@dimen/padding_top"
                android:padding="@dimen/padding_top"
                android:onClick="restartButton"
                android:text="@string/restart" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
